--- a/scandocs_ssh/v4/html/docexists/docexists.html
+++ b/scandocs_ssh/v4/html/docexists/docexists.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
+    <a class="aMain" href="../main/main9.html">Главная</a>
     <nav class="menu"><h2>Проверка наличия отсканированных документов</h2>
+        
     </nav>
     <main>
         <section class="search">
