--- a/scandocs_ssh/v4/html/fond/fond9.html
+++ b/scandocs_ssh/v4/html/fond/fond9.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <a class="aMain" href="../main/main9.html">Главная</a>
     <nav class="menu"><h2>Список фондов, имеющих оцифрованные описи</h2>
     </nav>
     <main>
