--- a/scandocs_ssh/v4/html/opises/opises2.html
+++ b/scandocs_ssh/v4/html/opises/opises2.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <a class="aMain" href="../main/main9.html">Главная</a>
 	 <nav class="menu"><h2>Список описей, имеющих оцифрованные дела</h2>
     </nav>
     <main>
