--- a/scandocs_ssh/v4/html/search/search1.html
+++ b/scandocs_ssh/v4/html/search/search1.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+    <a class="aMain" href="../main/main9.html">Главная</a>
 	 <nav class="menu"><h2>Поисковая система по электронным документам ЦГА Москвы</h2>
     </nav>
     <main>
